# detail-comparisons

./: .gitignore  README.md
.github/workflows/: ci.yml
claude-code-comparison/sessions-v2/openclaw/: aa92af43-8e5c-4a8d-8bd2-b8d1d9a41a66.jsonl
claude-code-comparison/sessions-v2/openclaw/aa92af43-8e5c-4a8d-8bd2-b8d1d9a41a66/subagents/: agent-a4cd6b39d7fef43f5.jsonl  agent-a4cd6b39d7fef43f5.meta.json  agent-a60f8f7dbd1b60d0c.jsonl  agent-a60f8f7dbd1b60d0c.meta.json  agent-a9dce4b7c9d49f125.jsonl  agent-a9dce4b7c9d49f125.meta.json  agent-af29b812b8c214a37.jsonl  agent-af29b812b8c214a37.meta.json
claude-code-comparison/sessions-v2/vllm/: 23d7b4da-3b40-4e60-ae7c-9261c995020a.jsonl
claude-code-comparison/sessions-v2/vllm/23d7b4da-3b40-4e60-ae7c-9261c995020a/subagents/: agent-a6eaa277c338caaab.jsonl  agent-a6eaa277c338caaab.meta.json  agent-a919d74cc2b3106fd.jsonl  agent-a919d74cc2b3106fd.meta.json  agent-acd3f9496e62afa62.jsonl  agent-acd3f9496e62afa62.meta.json
claude-code-comparison/sessions/openclaw/: c9ae3e1c-d2c8-41a9-ad96-c567344ed4e4.jsonl
claude-code-comparison/sessions/openclaw/c9ae3e1c-d2c8-41a9-ad96-c567344ed4e4/subagents/: agent-a06eca79506db5ef1.jsonl  agent-a06eca79506db5ef1.meta.json  agent-a4bdf7532f80db0ab.jsonl  agent-a4bdf7532f80db0ab.meta.json  agent-a9caf8e6c56ec22e6.jsonl  agent-a9caf8e6c56ec22e6.meta.json  (+2 more)
claude-code-comparison/sessions/vllm/: b197fdaf-8940-4313-bd41-6e22e99746a1.jsonl
review-bot-comparison/: README.md  pyproject.toml
review-bot-comparison/data/: detail_findings.json  eval_ranking.json  filters.json  summaries.json
review-bot-comparison/src/review_bot_comparison/: bradley_terry.py  cache.py  collect_wild_reviews.py  config.py  evaluate.py  llm.py  tournament.py
review-bot-comparison/tests/: test_bradley_terry.py  test_cache.py  test_collect_wild_reviews.py  test_config.py  test_evaluate.py  test_llm.py  test_tournament.py
(+11 files in other folders)
