[project]
name = "review-bot-comparison"
version = "0.1.0"
description = "Compare Detail bug findings against AI review bot comments via pairwise LLM judging and Bradley-Terry ranking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[project.scripts]
# Pipeline steps — run with: uv run <command>
collect-wild-reviews = "review_bot_comparison.collect_wild_reviews:main"
evaluate = "review_bot_comparison.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review_bot_comparison"]

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "PT",    # flake8-pytest-style
    "ERA",   # eradicate (commented-out code)
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "C4",    # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["review_bot_comparison"]

# ── ty (type checker) ────────────────────────────────────────────────
[tool.ty.environment]
extra-paths = ["src"]

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
